--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -92,7 +92,7 @@ jobs:
       with:
           owner-type: org
           token: ${{ secrets.GITHUB_TOKEN }}
-          repository_owner: ${{ github.repository_owner }}
+          repository-owner: ${{ github.repository_owner }}
           package-name: onegov-cloud
           delete-untagged: true
           keep-at-most: 20
@@ -103,7 +103,7 @@ jobs:
       with:
           owner-type: org
           token: ${{ secrets.GITHUB_TOKEN }}
-          repository_owner: ${{ github.repository_owner }}
+          repository-owner: ${{ github.repository_owner }}
           package-name: onegov-cloud
           delete-untagged: true
           keep-at-most: 20
