--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -83,7 +83,7 @@ jobs:
 
   cleanup-images:
     runs-on: ubuntu-latest
-    # needs: build-and-push-image
+    needs: build-and-push-image
 
     steps:
 
