--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -69,16 +69,7 @@ jobs:
       run: |
         source /app/bin/activate
         python -m pip install --upgrade uv
-        uv pip install .[mypy] \
-          GitPython \
-          flake8 \
-          flake8-bugbear \
-          flake8-comprehensions \
-          flake8-markupsafe@git+https://github.com/vmagamedov/flake8-markupsafe#egg=b391bd13df9330e01666d304b7f4403d67e5ceba \
-          flake8-noqa \
-          flake8-pyi \
-          flake8-type-checking \
-          bandit[toml]
+        uv pip install .[mypy,lint]
 
     - name: Linting
       run: /app/bin/flake8 src/ tests/ stubs/
@@ -172,11 +163,19 @@ jobs:
         # TEMPORARY: editable build so we don't need a path-fix in codecov
         uv pip install -e .[test]
 
+    - name: Prepare test environment
+      run: |
+        # reset the build assets again (like in the upstream container script),
+        # because pip install will undo that change
+        find . -type d -iname assets -print0 | xargs -0 chmod a+w -R
+        # add unprivileged test user
+        adduser --disabled-password --gecos "" test
+
     - name: Run tests
       run: |
-        adduser --disabled-password --gecos "" test
         run-as "$(id -u test)":test /app/bin/py.test \
           -n logical \
+          -o cache_dir=/tmp/pytest \
           --dist loadgroup \
           --splits "6" \
           --group "${{matrix.group}}" \
