--- a/setup.cfg
+++ b/setup.cfg
@@ -193,6 +193,7 @@ lint =
     flake8-type-checking
 mypy =
     dogpile.cache>=1.2.1
+    GitPython
     mypy
     sortedcontainers-stubs
     sqlalchemy-stubs
