--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -54,7 +54,7 @@ jobs:
   test-image:
     runs-on: ubuntu-latest
     needs: build-and-push-image
-    if: startsWith(github.ref, 'refs/tags/')
+    if: startsWith(github.ref, 'refs/tags/') || contains(github.event.head_commit.message, '[test-container]')
     strategy:
       matrix:
         group: [1, 2, 3, 4, 5, 6]
