Runs tests in our docker container on CI

--- a/setup.cfg
+++ b/setup.cfg
@@ -170,6 +170,16 @@ install_requires =
 
 [options.extras_require]
 dev =
+    gitpython
+    honyaku@git+https://github.com/seantis/honyaku#egg=honyaku
+    lingua==3.12
+    pre-commit
+    pytest-profiling
+    pytest-split
+    pytest-testmon
+    pytest-xdist
+    scrambler
+lint =
     bandit[toml]
     flake8
     flake8-bugbear
@@ -181,17 +191,9 @@ dev =
     flake8-noqa
     flake8-pyi
     flake8-type-checking
-    gitpython
-    honyaku@git+https://github.com/seantis/honyaku#egg=honyaku
-    lingua==3.12
-    pre-commit
-    pytest-profiling
-    pytest-split
-    pytest-testmon
-    pytest-xdist
-    scrambler
 mypy =
     dogpile.cache>=1.2.1
+    GitPython
     mypy
     sortedcontainers-stubs
     sqlalchemy-stubs
