--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,39 +17,26 @@ jobs:
 
     runs-on: ubuntu-24.04
 
+    # we always use the latest container from the master branch
+    # this is fine because we still run all our installs just in case
+    container:
+      image: ghcr.io/onegov/onegov-cloud:master
+      credentials:
+         username: ${{ github.actor }}
+         password: ${{ secrets.GITHUB_TOKEN }}
+
+    defaults:
+      run:
+        shell: bash
+
     if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
     name: Lint
 
     steps:
     - name: Install packages
       run: |
-        sudo apt-get update
-        sudo apt-get install \
-          build-essential \
-          git \
-          gcc \
-          g++ \
-          libcurl4-openssl-dev \
-          libffi-dev \
-          libjpeg-dev \
-          libpq-dev \
-          libxml2-dev \
-          libxslt1-dev \
-          zlib1g-dev \
-          libev-dev \
-          libgnutls28-dev \
-          libkrb5-dev \
-          libpoppler-cpp-dev \
-          pv \
-          libzbar0 \
-          openssl \
-          libssl-dev \
-          xmlsec1 \
-          libxmlsec1-openssl \
-          ghostscript \
-          zip \
-          libev4 \
-          libmagic1 \
+        apt-get update
+        apt-get install -y \
           wget \
           apparmor \
           curl \
@@ -61,7 +48,7 @@ jobs:
           libc-dev \
           fonts-liberation \
           libappindicator3-1 \
-          libasound2t64  \
+          libasound2t64 \
           libdrm2 \
           libgbm1 \
           libnspr4 \
@@ -72,43 +59,27 @@ jobs:
           libxcb-dri3-0 \
           libxshmfence1 \
           libxss1 \
-          xdg-utils \
-          --fix-missing
+          xdg-utils
 
     - name: Checkout repo
       uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: 3.11
-
     - name: Install dependencies
       run: |
+        source /app/bin/activate
         python -m pip install --upgrade uv
-        uv pip install .[mypy] \
-          GitPython \
-          flake8 \
-          flake8-bugbear \
-          flake8-comprehensions \
-          flake8-markupsafe@git+https://github.com/vmagamedov/flake8-markupsafe#egg=b391bd13df9330e01666d304b7f4403d67e5ceba \
-          flake8-noqa \
-          flake8-pyi \
-          flake8-type-checking \
-          bandit[toml]
-      env:
-        UV_SYSTEM_PYTHON: true
+        uv pip install .[mypy,lint]
 
     - name: Linting
-      run: flake8 src/ tests/ stubs/
+      run: /app/bin/flake8 src/ tests/ stubs/
 
     - name: Check security issues
-      run: bandit --recursive --configfile pyproject.toml src/
+      run: /app/bin/bandit --recursive --configfile pyproject.toml src/
 
     - name: Static type checking
-      run: bash mypy.sh
-      env:
-        SKIP_VENV: 1
+      run: |
+        source /app/bin/activate
+        bash mypy.sh
 
   test:
     strategy:
@@ -118,39 +89,26 @@ jobs:
 
     runs-on: ubuntu-24.04
 
+    # we always use the latest container from the master branch
+    # this is fine because we still run all our installs just in case
+    container:
+      image: ghcr.io/onegov/onegov-cloud:master
+      credentials:
+         username: ${{ github.actor }}
+         password: ${{ secrets.GITHUB_TOKEN }}
+
+    defaults:
+      run:
+        shell: bash
+
     if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
     name: Test group ${{ matrix.group }}
 
     steps:
     - name: Install packages
       run: |
-        sudo apt-get update
-        sudo apt-get install \
-          build-essential \
-          git \
-          gcc \
-          g++ \
-          libcurl4-openssl-dev \
-          libffi-dev \
-          libjpeg-dev \
-          libpq-dev \
-          libxml2-dev \
-          libxslt1-dev \
-          zlib1g-dev \
-          libev-dev \
-          libgnutls28-dev \
-          libkrb5-dev \
-          libpoppler-cpp-dev \
-          pv \
-          libzbar0 \
-          openssl \
-          libssl-dev \
-          xmlsec1 \
-          libxmlsec1-openssl \
-          ghostscript \
-          zip \
-          libev4 \
-          libmagic1 \
+        apt-get update
+        apt-get install -y \
           wget \
           apparmor \
           curl \
@@ -162,7 +120,7 @@ jobs:
           libc-dev \
           fonts-liberation \
           libappindicator3-1 \
-          libasound2t64  \
+          libasound2t64 \
           libdrm2 \
           libgbm1 \
           libnspr4 \
@@ -173,53 +131,49 @@ jobs:
           libxcb-dri3-0 \
           libxshmfence1 \
           libxss1 \
-          xdg-utils \
-          --fix-missing
+          xdg-utils
 
         wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-        sudo dpkg -i google-chrome-stable_current_amd64.deb
-
-        export JAVA_HOME="/usr/lib/jvm/java-8-openjdk-amd64"
-        export LC_ALL="C.UTF-8"
-        export LANG="C.UTF-8"
-
-        redis-server --daemonize yes
+        dpkg -i google-chrome-stable_current_amd64.deb
 
     - name: Checkout repo
       uses: actions/checkout@v4
 
     - name: Get branch name (merge)
       if: github.event_name != 'pull_request'
-      shell: bash
       run: |
         echo "BUILDKITE_BRANCH=$(echo ${GITHUB_REF#refs/heads/} | tr / -)" \
              >> $GITHUB_ENV
 
     - name: Get branch name (pull request)
       if: github.event_name == 'pull_request'
-      shell: bash
       run: |
         echo "BUILDKITE_BRANCH=$(echo ${GITHUB_HEAD_REF} | tr / -)" \
              >> $GITHUB_ENV
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: 3.11
-
     - name: Install dependencies
       run: |
+        source /app/bin/activate
         python -m pip install --upgrade uv
         uv pip install pytest-split pytest-cov pytest-codecov pytest-xdist psutil
         # TEMPORARY: editable build so we don't need a path-fix in codecov
         uv pip install -e .[test]
-      env:
-        UV_SYSTEM_PYTHON: true
+
+    - name: Prepare test environment
+      run: |
+        # reset the build asset permissions
+        # TEMPORARY: if we no longer do an editable install, then the base
+        #            path needs to change to /app/lib/
+        find . -type d -iname assets -print0 | xargs -0 chmod a+w -R
+        # add unprivileged test user
+        adduser --disabled-password --gecos "" test
+        redis-server --daemonize yes
 
     - name: Run tests
       run: |
-        py.test \
+        run-as "$(id -u test)":test /app/bin/py.test \
           -n logical \
+          -o cache_dir=/tmp/pytest \
           --dist loadgroup \
           --splits "6" \
           --group "${{matrix.group}}" \
@@ -231,3 +185,7 @@ jobs:
           --codecov-slug=OneGov/onegov-cloud \
           --codecov-token="${{ secrets.CODECOV_TOKEN }}" \
           tests
+      env:
+        LC_ALL: C.UTF-8
+        LANG: C.UTF-8
+        JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
