Update [skip ci]

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:  # allow to run manually
   push:
     branches:
-      - '**' # todo: 'master'
+      - 'master'
 
 jobs:
   docs:
