--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,91 +4,20 @@ on:
   workflow_dispatch:  # allow to run manually
   push:
     branches:
-      - 'master'
+      - '**'  # todo:
 
 jobs:
-  docs:
+  pages:
     runs-on: ubuntu-24.04
 
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    permissions:
+      pages: write
+      id-token: write
+
     steps:
-    - name: Install packages
-      run: |
-        sudo apt-get update
-        sudo apt-get install \
-          build-essential \
-          git \
-          gcc \
-          g++ \
-          libcurl4-openssl-dev \
-          libffi-dev \
-          libjpeg-dev \
-          libpq-dev \
-          libxml2-dev \
-          libxslt1-dev \
-          zlib1g-dev \
-          libev-dev \
-          libgnutls28-dev \
-          libkrb5-dev \
-          libpoppler-cpp-dev \
-          pv \
-          libzbar0 \
-          openssl \
-          libssl-dev \
-          xmlsec1 \
-          libxmlsec1-openssl \
-          ghostscript \
-          zip \
-          libev4 \
-          libmagic1 \
-          wget \
-          apparmor \
-          curl \
-          git-core \
-          postgresql \
-          redis \
-          openjdk-8-jre-headless \
-          gcc \
-          libc-dev \
-          fonts-liberation \
-          libappindicator3-1 \
-          libasound2t64  \
-          libdrm2 \
-          libgbm1 \
-          libnspr4 \
-          libnss3 \
-          libu2f-udev \
-          libvulkan1 \
-          libx11-xcb1 \
-          libxcb-dri3-0 \
-          libxshmfence1 \
-          libxss1 \
-          xdg-utils \
-          make \
-          --fix-missing
-
-    - name: Checkout repo
-      uses: actions/checkout@v4
-
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: 3.11
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade uv
-        uv pip install .[docs]
-      env:
-        UV_SYSTEM_PYTHON: true
-
-    - name: Building and deploying docs
-      run: |
-        cd docs
-        make html
-        cd _build/html
-        zip -r docs.zip .
-        curl \
-          -H "Content-Type: application/zip" \
-          -H "Authorization: Bearer ${{ secrets.NETLIFY_TOKEN }}" \
-          --data-binary "@docs.zip" \
-          https://api.netlify.com/api/v1/sites/onegov-cloud-docs.netlify.com/deploys
+    - id: deployment
+      uses: sphinx-notes/pages@v3
