--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,8 +3,7 @@ name: Docs
 on:
   workflow_dispatch:  # allow to run manually
   push:
-    branches:
-      - '**'  # todo:
+    branches: [master]
 
 jobs:
   pages:
