Feriennet: Removes uses of structure keyword in templates
TYPE: Bugfix
LINK: OGC-1723

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,7 +14,7 @@ repos:
       - id: nocheckin
         exclude: .pre-commit-config.yaml
       - id: pt_structure
-        exclude: /(feriennet|org|town6)/
+        exclude: /(org|town6)/
   - repo: https://github.com/PyCQA/flake8
     rev: 7.1.0
     hooks:
