--- a/setup.cfg
+++ b/setup.cfg
@@ -139,7 +139,7 @@ install_requires =
     requests
     rjsmin
     sedate
-    sentry_sdk
+    sentry_sdk<2.10.0
     sortedcontainers
     sqlalchemy<1.4.0
     sqlalchemy-utils
