Core: Updates Sentry integration for v2.10+
TYPE: Bugfix
LINK: OGC-1745

--- a/setup.cfg
+++ b/setup.cfg
@@ -139,7 +139,7 @@ install_requires =
     requests
     rjsmin
     sedate
-    sentry_sdk<2.10.0
+    sentry_sdk
     sortedcontainers
     sqlalchemy<1.4.0
     sqlalchemy-utils
