--- a/setup.cfg
+++ b/setup.cfg
@@ -140,6 +140,8 @@ install_requires =
     rjsmin
     sedate
     sentry_sdk
+    # FIXME: 71 breaks something with vendored importlib
+    setuptools<71
     sortedcontainers
     sqlalchemy<1.4.0
     sqlalchemy-utils
@@ -222,7 +224,7 @@ mypy =
     types-redis
     types-reportlab
     types-requests
-    types-setuptools
+    types-setuptools<71
     types-stripe
     types-toposort
     types-translationstring
