mypy: Updates mypy to 1.11.0 and fixes new issues

--- a/setup.cfg
+++ b/setup.cfg
@@ -196,7 +196,7 @@ lint =
 mypy =
     dogpile.cache>=1.2.1
     GitPython
-    mypy<1.11
+    mypy
     sortedcontainers-stubs
     sqlalchemy-stubs
     types-babel
