Org: Adds mTAN as a second factor option
This second factor can be configured to be automatically set up after
the first login of a user without a configured second factor.

TYPE: Feature
LINK: OGC-1030

--- a/onegov.yml.example
+++ b/onegov.yml.example
@@ -132,6 +132,10 @@ configuration: &global-config
   # yubikey_client_id:
   # yubikey_secret_key:
 
+  # To test mTAN second factor, enable it here
+  # mtan_second_factor_enabled: true
+  # mtan_automatic_setup: true
+
   # To test mapbox integration, a mapbox token has to be provided
   # mapbox_token:
 
