--- a/setup.cfg
+++ b/setup.cfg
@@ -141,8 +141,7 @@ install_requires =
     rjsmin
     sedate
     sentry_sdk
-    # FIXME: 71 breaks something with vendored importlib
-    setuptools<71
+    setuptools
     sortedcontainers
     sqlalchemy<1.4.0
     sqlalchemy-utils
