Ports sentry tests to 2.0 API to get rid of deprecation warnings
Also filters pkg_resources warnings, since we can't do anything about
them. We'll keep the stdlib module deprecation warnings around for now.
Worst case we can install them from PyPI, when we switch to 3.13

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,10 @@ build-backend = "setuptools.build_meta"
 log_level = "INFO"
 testpaths = ["tests"]
 timeout = 300
+filterwarnings = [
+    "ignore:pkg_resources is deprecated as an API",
+    "ignore:Deprecated call to `pkg_resources\\.declare_namespace\\('.*'\\):DeprecationWarning"
+]
 
 [tool.coverage.run]
 data_file = "/tmp/.coverage"
