--- a/setup.cfg
+++ b/setup.cfg
@@ -254,7 +254,7 @@ test =
     psutil
     pyquery
     pytest
-    pytest-asyncio
+    pytest-asyncio < 0.24.0
     pytest-localserver
     pytest-redis
     pytest-rerunfailures
