--- a/setup.cfg
+++ b/setup.cfg
@@ -159,7 +159,7 @@ install_requires =
     watchdog
     webcolors
     webob
-    websockets < 13.0
+    websockets
     webtest
     werkzeug
     wtforms
