--- a/setup.cfg
+++ b/setup.cfg
@@ -54,7 +54,7 @@ packages =
     onegov.translator_directory
 install_requires =
     AIS2.py
-    aiohttp
+    aiohttp < 3.10.5
     Pillow
     PyYAML
     alembic
