--- a/setup.cfg
+++ b/setup.cfg
@@ -255,7 +255,7 @@ test =
     pyquery
     pytest
     pytest-asyncio < 0.24.0
-    pytest-localserver
+    pytest-localserver < 0.9.0
     pytest-redis
     pytest-rerunfailures
     pytest-timeout
