--- a/setup.cfg
+++ b/setup.cfg
@@ -141,7 +141,7 @@ install_requires =
     rjsmin
     sedate
     sentry_sdk
-    setuptools
+    setuptools < 71.0.0
     sortedcontainers
     sqlalchemy<1.4.0
     sqlalchemy-utils
