Uses action to install the driver [test-container]

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -140,6 +140,7 @@ jobs:
       with:
         # FIXME: Unpin once selenium works with newer version
         chrome-version: 127
+        install-chromedriver: true
 
     - name: Checkout repo
       uses: actions/checkout@v4
@@ -194,3 +195,4 @@ jobs:
         LC_ALL: C.UTF-8
         LANG: C.UTF-8
         JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
+        SKIP_DRIVER_MANAGER: '1'
