Pins `sphinx-autoapi`

--- a/setup.cfg
+++ b/setup.cfg
@@ -235,7 +235,8 @@ docs =
     docutils
     Jinja2
     sphinx
-    sphinx-autoapi
+    # FIXME: OGC-1811
+    sphinx-autoapi<3.3.0
     typing-extensions
     myst-parser
 test =
