--- a/setup.cfg
+++ b/setup.cfg
@@ -156,7 +156,7 @@ install_requires =
     unidecode
     urlextract
     vobject
-    watchdog < 5.0.0
+    watchdog
     webcolors
     webob
     websockets
