--- a/setup.cfg
+++ b/setup.cfg
@@ -160,7 +160,7 @@ install_requires =
     webcolors
     webob
     websockets
-    webtest
+    webtest < 3.0.1
     werkzeug
     wtforms
     xlrd
