Gives up on unpin for now, but let's keep the other improvements

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -148,7 +148,7 @@ jobs:
     - name: Install Chrome
       uses: browser-actions/setup-chrome@v1
       with:
-        chrome-version: stable
+        chrome-version: 127
         install-chromedriver: true
 
     - name: Checkout repo
@@ -183,8 +183,6 @@ jobs:
         # add unprivileged test user
         adduser --disabled-password --gecos "" test
         redis-server --daemonize yes
-        mkdir /tmp/chrome
-        chown test /tmp/chrome
 
     - name: Run tests
       run: |
@@ -207,4 +205,3 @@ jobs:
         LANG: C.UTF-8
         JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
         SKIP_DRIVER_MANAGER: '1'
-        CHROME_USER_DATA_DIR: /tmp/chrome
