--- a/.github/workflows/measure-and-store-test-durations.yml
+++ b/.github/workflows/measure-and-store-test-durations.yml
@@ -55,7 +55,7 @@ jobs:
     - name: Install Chrome
       uses: browser-actions/setup-chrome@v1
       with:
-        chrome-version: stable
+        chrome-version: 127
         install-chromedriver: true
 
     - name: Checkout repo
@@ -78,8 +78,6 @@ jobs:
         # add unprivileged test user
         adduser --disabled-password --gecos "" test
         redis-server --daemonize yes
-        mkdir /tmp/chrome
-        chown test /tmp/chrome
 
     - name: Measure test durations
       run: |
@@ -93,7 +91,6 @@ jobs:
         LANG: C.UTF-8
         JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
         SKIP_DRIVER_MANAGER: '1'
-        CHROME_USER_DATA_DIR: /tmp/chrome
 
     - uses: EndBug/add-and-commit@v9
       with:
