--- a/.github/workflows/measure-and-store-test-durations.yml
+++ b/.github/workflows/measure-and-store-test-durations.yml
@@ -55,6 +55,7 @@ jobs:
     - name: Install Chrome
       uses: browser-actions/setup-chrome@v1
       with:
+        # FIXME: OGC-1857
         chrome-version: 127
         install-chromedriver: true
 
