--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -148,6 +148,7 @@ jobs:
     - name: Install Chrome
       uses: browser-actions/setup-chrome@v1
       with:
+        # FIXME: OGC-1857
         chrome-version: 127
         install-chromedriver: true
 
