--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -174,6 +174,9 @@ jobs:
         uv pip install pytest-split pytest-cov pytest-codecov pytest-xdist psutil
         # TEMPORARY: editable build so we don't need a path-fix in codecov
         uv pip install -e .[test]
+      env:
+        # NOTE: Suppress uv warning
+        UV_LINK_MODE: copy
 
     - name: Prepare test environment
       run: |
