Cleanup test workflows

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -123,7 +123,6 @@ jobs:
           wget \
           apparmor \
           curl \
-          chromium-browser \
           git-core \
           postgresql \
           redis \
@@ -149,7 +148,7 @@ jobs:
     - name: Install Chrome
       uses: browser-actions/setup-chrome@v1
       with:
-        # FIXME: Unpin once selenium works with newer version
+        # FIXME: OGC-1857
         chrome-version: 127
         install-chromedriver: true
 
@@ -175,6 +174,9 @@ jobs:
         uv pip install pytest-split pytest-cov pytest-codecov pytest-xdist psutil
         # TEMPORARY: editable build so we don't need a path-fix in codecov
         uv pip install -e .[test]
+      env:
+        # NOTE: Suppress uv warning
+        UV_LINK_MODE: copy
 
     - name: Prepare test environment
       run: |
@@ -188,7 +190,7 @@ jobs:
 
     - name: Run tests
       run: |
-        run-as "$(id -u test)":test /app/bin/py.test \
+        run-as "$(id -u test)":test /app/bin/pytest \
           -n logical \
           -o cache_dir=/tmp/pytest \
           --dist loadgroup \
