Removes `sphinx-autoapi` pin.
There still is a bug in `sphinx-autoapi`, but the code that was causing
a crash is no longer required. So I removed it.

--- a/setup.cfg
+++ b/setup.cfg
@@ -234,8 +234,7 @@ docs =
     docutils
     Jinja2
     sphinx
-    # FIXME: OGC-1811
-    sphinx-autoapi<3.3.0
+    sphinx-autoapi
     typing-extensions
     myst-parser
 test =
