--- a/setup.cfg
+++ b/setup.cfg
@@ -90,8 +90,7 @@ install_requires =
     html2text
     html5lib
     humanize
-    # FIXME: OGC-1854
-    icalendar<6
+    icalendar
     isodate
     itsdangerous
     jsonpickle
@@ -202,8 +201,7 @@ mypy =
     types-bleach
     types-editdistance
     types-html5lib
-    # FIXME: OGC-1854
-    types-icalendar<6
+    types-icalendar
     types-ldap3
     types-libsass
     types-lxml
