mypy: Adds the `faster-cache` extra
This should speed up things a little bit on repeated runs

--- a/setup.cfg
+++ b/setup.cfg
@@ -193,7 +193,7 @@ lint =
 mypy =
     dogpile.cache>=1.2.1
     GitPython
-    mypy
+    mypy[faster-cache]
     sortedcontainers-stubs
     sqlalchemy-stubs
     types-babel
