--- a/pyproject.toml
+++ b/pyproject.toml
@@ -134,18 +134,13 @@ target-version = "py311"
 select = [
     "B0",
     "B904",
+    "B909",
     "C4",
     "COM818",
     "D2",
     "D301",
     "D4",
     "E",
-    "E301",
-    "E302",
-    "E303",
-    "E304",
-    "E305",
-    "E306",
     "F",
     "FLY002",
     "ISC",
@@ -157,11 +152,13 @@ select = [
     "Q",
     "RUF",
     "SIM",
+    "SLOT",
     "UP",
     "W"
 ]
 ignore = [
     "B007",
+    "C420",
     "D200",
     "D201",
     "D202",
@@ -173,6 +170,7 @@ ignore = [
     "D400",
     "D401",
     "D412",
+    "E226",
     "E402",
     "E711",
     "E712",
@@ -182,18 +180,19 @@ ignore = [
     "PYI041",
     "RUF012",
     "RUF013",
-    # TODO: We would like to enable some of these eventually
-    #       But there are a lot of violations
+    "RUF021",
+    "RUF022",
+    "RUF023",
+    "RUF031",
+    # TODO: We would like to enable SIM102, but it has a ton of
+    #       violations, so it's a big job to clean it up
     "SIM102",
     "SIM103",
     "SIM105",
     "SIM108",
     "SIM110",
-    "SIM113",
-    "SIM114",
     "SIM118",
     "SIM210",
-    "SIM211",
     "SIM910",
     "UP009",
     "UP012",
@@ -204,19 +203,13 @@ ignore = [
 unfixable = []
 external = ["MS", "TC"]
 allowed-confusables = ["×"]
-# NOTE: Enable preview rules, but only the ones we select explicitly
 preview = true
-explicit-preview-rules = true
 
 [tool.ruff.lint.extend-per-file-ignores]
 "src/onegov/core/types.py" = ["B018"]
 "reportlab_settings.py" = ["N"]
 "*.pyi" = [
-    "D",
     "E501",
-    # TODO: re-enable this one, I think it is smarter in Ruff
-    "F401",
-    "F403",
     "N",
     "Q",
     # NOTE: We would prefer to set a different target version instead
