--- a/.github/workflows/measure-and-store-test-durations.yml
+++ b/.github/workflows/measure-and-store-test-durations.yml
@@ -66,7 +66,7 @@ jobs:
       run: |
         source /app/bin/activate
         python -m pip install --upgrade uv
-        uv pip install pytest-split
+        uv pip install pytest-split pytest-xdist
         # TEMPORARY: editable build so we don't need a path-fix in codecov
         uv pip install -e .[test]
       env:
