Fix dubious ownership issue in measure test duration workflow [skip ci]

--- a/.github/workflows/measure-and-store-test-durations.yml
+++ b/.github/workflows/measure-and-store-test-durations.yml
@@ -84,6 +84,8 @@ jobs:
         redis-server --daemonize yes
         # NOTE: Allow the test user to write to this file
         chown test .test_durations
+        # NOTE: Avoid dubious ownership error when commiting
+        git config --global --add safe.directory $PWD
 
     - name: Measure test durations
       run: |
