Remove ruff pin and make use of RUF035 rule for markupsafe

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -192,7 +192,7 @@ ignore = [
     "UP038",
 ]
 unfixable = []
-external = ["MS", "TC"]
+external = ["TC"]
 allowed-confusables = ["×"]
 preview = true
 
