Revert removing ruff dependency

--- a/setup.cfg
+++ b/setup.cfg
@@ -187,6 +187,7 @@ lint =
     #       or get an equivalent rule added to bandit
     #       for now we pin to a specific commit for safety
     flake8-type-checking
+    ruff!=0.7.2
 mypy =
     dogpile.cache>=1.2.1
     GitPython
