Add Plakatsammlung Basel to external resources view

--- a/onegov.yml.example
+++ b/onegov.yml.example
@@ -154,8 +154,10 @@ configuration: &global-config
   # Install https://github.com/seantis/d3-renderer
   # d3_renderer: 'http://localhost:1337'
 
-  # For Swissvotes, the Museum für Gestatlung has an api
+  # For Swissvotes, the Museum für Gestaltung and the Plakatsammlung Basel
+  # have an api token to be specified
   # mfg_api_token:
+  # bs_api_token:
 
   # for org app, disable the password reset view (case the users have their own auth providers)
   # disable_password_reset: true
