--- a/pyproject.toml
+++ b/pyproject.toml
@@ -192,7 +192,7 @@ ignore = [
     "UP038",
 ]
 unfixable = []
-external = ["MS", "TC"]
+external = ["TC"]
 allowed-confusables = ["×"]
 preview = true
 
@@ -259,6 +259,9 @@ multiline-quotes = "double"
 
 [tool.ruff.lint.pyupgrade]
 keep-runtime-typing = true
+
+[tool.ruff.lint.ruff]
+extend-markup-names = ["chameleon.utils.Markup"]
 
 [tool.ruff.format]
 quote-style = "single"
